--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -254,6 +254,23 @@
         </script>
 	<![endif]-->
 
+    <script type="text/javascript">
+        if (window.Configuration.AnalyticsKey) {
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', window.Configuration.AnalyticsKey]);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script');
+                ga.type = 'text/javascript';
+                ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(ga, s);
+            })();
+        }
+    </script>
+
     <a href="#" id="carty" class="carty" style="display: none; position: fixed; top: 40%; left: 40%; background: #fff; border-radius: 18px; box-shadow: 0px 0px 13px #333; border: 3px solid maroon; padding: 2em;">
         <img src="@Url.Image("Carty.png")" style="padding: 2em 1em; float: left; width: 100px;" />
         <span style="font-size: 2em; float: right; display: block; width: 200px; padding: 2em 1em;">Looks like you're trying to look at Orders! Can I be of service today?</span>
