--- a/Purchasing.Web/Views/Order/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/Order/AdminOrders.cshtml
@@ -36,6 +36,7 @@
                 buttons: {
                     "Cancel": function () {
                         $("#peepsUl").empty();
+                        $("#peepsLoaderId").hide();
                         $(this).dialog("close");
                     }
                 }
@@ -67,9 +68,9 @@
                 var dialogList = $("#peepsUl");
                 dialogList.empty();
                 $("#peepsDialog").dialog("open");
-                $("#peepsLoaderId").toggle();
+                $("#peepsLoaderId").show();
                 $.getJSON(url, { id: orderId, orderStatusCodeId: role }, function (result) {
-                    $("#peepsLoaderId").toggle();
+                    $("#peepsLoaderId").hide();
                     if (result == null || result.success == false) {
                         alert("There was a problem getting the list of users.");
                     } else {
