--- a/Purchasing.Web/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Web/Views/Order/ReceiveItems.cshtml
@@ -157,9 +157,9 @@
                 var dialogList = $("#historyBody");
                 dialogList.empty();
                 $("#peepsDialog").dialog("open");
-                $("#peepsLoaderId").toggle();
+                $("#peepsLoaderId").show();
                 $.getJSON(url, { id: orderId, lineItemId: lineItemId }, function (result) {
-                    $("#peepsLoaderId").toggle();
+                    $("#peepsLoaderId").hide();
                     if (result == null || result.success == false) {
                         alert("There was a problem getting the list of users.");
                     } else {
@@ -186,6 +186,7 @@
                 buttons: {
                     "Cancel": function () {
                         $("#peepsUl").empty();
+                        $("#peepsLoaderId").hide();
                         $(this).dialog("close");
                     }
                 }
