added a link to the prepurchasing website from the home page.

--- a/Purchasing.Web/Views/Home/Index.cshtml
+++ b/Purchasing.Web/Views/Home/Index.cshtml
@@ -144,6 +144,12 @@
                         You must have a valid kerberos login and password to access this system.  Please contact your department prepurchasing administrator for permissions.
 
                     </p>
+                    
+                    <p>
+                        
+                        For more information and how to obtain access, please refer to the following website <a href="http://ucdavis.github.com/Purchasing/index.html">here</a>.
+
+                    </p>
 
                     <p>
                     @Html.ActionLink("Enter the PrePurchasing System", "Landing", "Home", new {}, new {@class="button"})
