updated the link on the main page

--- a/Purchasing.Web/Views/Home/Index.cshtml
+++ b/Purchasing.Web/Views/Home/Index.cshtml
@@ -147,7 +147,7 @@
                     
                     <p>
                         
-                        For more information and how to obtain access, please refer to the following website <a href="http://ucdavis.github.com/Purchasing/index.html">here</a>.
+                        For more information and how to obtain access, please refer to the <a href="http://ucdavis.github.com/Purchasing/index.html">PrePurchasing Application website</a>.
 
                     </p>
 
