if vendor has url, it's shown in review vCard

--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -56,8 +56,11 @@
                                 <span class="street-address">@Model.Vendor.Line1</span>
                                 <span class="locality">@Model.Vendor.City</span>
                                 <span class="region" title="California">@Model.Vendor.State</span>
-                                <span class="postal-code">@Model.Vendor.Zip</span>
                             </div>
+                            @if (!string.IsNullOrWhiteSpace(Model.Vendor.Url))
+                            {
+                                <div class="url"><a href="@Model.Vendor.Url">@Model.Vendor.Url</a></div>
+                            }
 
                         </div>
                     }
