updated tooltips for amount remaining shortcut

--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -77,7 +77,7 @@
                                             <input 
                                                 data-bind="value: amountComputed, splitName: 'amount', valueUpdate: 'afterkeydown'"
                                                 autocomplete="off" placeholder="amt" class="line-item-split-account-amount" 
-                                                title="Dollar amount for this account. Will also auto-calculate a percentage."/>
+                                                title="Dollar amount for this account. Will also auto-calculate a percentage. Press Ctrl+Enter to fill with remaining unaccounted $"/>
                                             &nbsp;&nbsp;
                                             <input data-bind="value: percentComputed, splitName: 'percent', valueUpdate: 'afterkeydown'" 
                                                    autocomplete="off" placeholder="pct" class="line-item-split-account-percent" 
