--- a/Purchasing.Web/Views/Order/_OrderSplits.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderSplits.cshtml
@@ -20,7 +20,7 @@
                     <td class="account-split-amounts">
                         <span>$</span><input data-bind="value: amountComputed, splitName: 'amount', valueUpdate: 'afterkeydown'"
                                              type="text" autocomplete="off" placeholder="amt" class="order-split-account-amount" 
-                                             title="Dollar amount for this account. Will also auto-calculate a percentage."/>
+                                             title="Dollar amount for this account. Will also auto-calculate a percentage. Press Ctrl+Enter to fill with remaining unaccounted $."/>
                    
                         <input data-bind="value: percentComputed, splitName: 'percent', valueUpdate: 'afterkeydown'" 
                                type="text" autocomplete="off" placeholder="pct" class="order-split-account-percent" 
