wip finalizing orderhistory first attempt

--- a/Purchasing.Web/Views/Order/_OrderFilter.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderFilter.cshtml
@@ -57,6 +57,22 @@
                     @Html.EditorFor(model => model.EndDate)
                 </div>
             </li>
+             <li class="datepicker">
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.StartLastActionDate)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.StartLastActionDate)
+                </div>
+            </li>
+            <li class="datepicker">
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.EndLastActionDate)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.EndLastActionDate)
+                </div>
+            </li>
             <li class="apply">
                 <input class="button" type="submit" value="Apply" />
             </li>
