Fix for the Search button being in front of the drop down menu.

--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -168,7 +168,7 @@
                    @using (Html.BeginForm("Results", "Search", FormMethod.Get))
                     {
                        <input type="search" name="q" placeholder="Search Your Orders"/>
-                       <input type="submit" class="button" value="Search" style="font-size: 1.25em;"/>
+                       <input type="submit" class="button" value="Search" style="font-size: 1.25em; position: static;"/>
                     }
                 </div>
             </div>
