Added a style for the Disabled workgroup fields.

--- a/Purchasing.Web/Views/Workgroup/Details.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Details.cshtml
@@ -87,6 +87,7 @@
             margin-right: 30px;
             cursor: pointer;            
         }
+        div.workgroup-info.disable {border: 1px solid #ddd; color: #bbb; cursor: auto; box-shadow: none;}
         div.workgroup-info:last-child {}
         div.workgroup-info:hover
         {
@@ -94,6 +95,7 @@
             -webkit-box-shadow:inset 0 0 10px lightblue;
             box-shadow:inset 0 0 10px lightblue;
         }
+        div.workgroup-info.disable:hover {-moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;}
         div.workgroup-info ul
         {
             padding: 0;
@@ -108,6 +110,7 @@
             color: #014A81;
             font-weight: bold;
         }
+        .disable .prop-name { color: #aaa; }
         .prop-value
         {
             font-size: 4em;
