--- a/Purchasing.Web/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Web/Views/Order/ReceiveItems.cshtml
@@ -59,6 +59,10 @@
         
         form section ul, .display-form ul {padding:0;}
         #accounts .section-contents, #attachments .section-contents, #notes .section-contents, .vcard {font-size:1.2em; line-height:2.5em;}
+
+       .even:hover, .odd:hover {box-shadow: 0 1px 5px #BBBBBB; border: 1px solid #fff; background-color: transparent;} 
+       
+       .section-contents .no-icon-table tr .receiveLineItemCell {width: 150px;}
     </style>
     
     
