ajax load of counts for completed and denied on landing page, made orderService return a queryable object to try and improve performance.

--- a/Purchasing.Web/Views/Home/Landing.cshtml
+++ b/Purchasing.Web/Views/Home/Landing.cshtml
@@ -20,6 +20,7 @@
             OrdersBaseUrl: '@Url.Action("Index", "Order")',
             RecentActivityUrl: '@Url.Action("RecentActivity", "History")',
             RecentlyCompletedUrl: '@Url.Action("RecentlyFinished", "History")',
+            RecentlyDeniedUrl: '@Url.Action("RecentlyDenied", "History")',
             RecentComments: '@Url.Action("RecentComments", "History")'
         });
         
@@ -103,11 +104,11 @@
         <div id="recently-completed">
         <p><span class="time-ago">This month, you've had</span></p>
             <div class="scoreboard">
-                <p class="count"><a href="@Url.Action("Index", "Order", new { selectedOrderStatus = OrderStatusCode.Codes.Complete, startLastActionDate = new DateTime(DateTime.Now.Year, DateTime.Now.Month, 1) })">@Model.CompletedOrdersThisMonth</a>
+                <p class="count"><a id="completed-container" href="@Url.Action("Index", "Order", new { selectedOrderStatus = OrderStatusCode.Codes.Complete, startLastActionDate = new DateTime(DateTime.Now.Year, DateTime.Now.Month, 1) })">--</a>
                     <span class="label">Completed Orders</span></p>
             </div>
             <div class="scoreboard">
-            <p class="count"><a href="@Url.Action("Index", "Order", new { selectedOrderStatus = OrderStatusCode.Codes.Denied, startLastActionDate = new DateTime(DateTime.Now.Year, DateTime.Now.Month, 1) })">@Model.DeniedOrdersThisMonth</a>
+            <p class="count"><a id="denied-container" href="@Url.Action("Index", "Order", new { selectedOrderStatus = OrderStatusCode.Codes.Denied, startLastActionDate = new DateTime(DateTime.Now.Year, DateTime.Now.Month, 1) })">--</a>
                 <span class="label">Denied Orders</span></p>
             </div>
         <p class="review"><a href="@Url.Action("Index","Order")">Review your history &gt;</a></p>
