Combined completed and denied order count into 1 ajax call

--- a/Purchasing.Web/Views/Home/Landing.cshtml
+++ b/Purchasing.Web/Views/Home/Landing.cshtml
@@ -19,8 +19,7 @@
         purchasing.options({
             OrdersBaseUrl: '@Url.Action("Index", "Order")',
             RecentActivityUrl: '@Url.Action("RecentActivity", "History")',
-            RecentlyCompletedUrl: '@Url.Action("RecentlyFinished", "History")',
-            RecentlyDeniedUrl: '@Url.Action("RecentlyDenied", "History")',
+            RecentlyCompletedUrl: '@Url.Action("RecentlyCompleted", "History")',
             RecentComments: '@Url.Action("RecentComments", "History")'
         });
         
