--- a/Purchasing.Web/Views/Wizard/AddSubOrganizations.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddSubOrganizations.cshtml
@@ -30,6 +30,10 @@
     
         .selector {margin: 2em 0;}
         .selector h3 {margin-bottom: .5em;}
+        form section div.editor-field {width: 680px; margin-left: 1em;}
+    
+        .editor-field .selector .ac-selectedContainer span.ac-gradientbackground {border: 1px solid #bbb; border-radius: 8px; padding: .5em;}
+        
     
         header.title
         {
@@ -53,15 +57,15 @@
     <section>
     
 	    <header class="ui-corner-all ui-widget-header">Add Suborganizations <a href="#" id="help-organizations-page" class="ui-icon ui-icon-help showTip" title="You can add any number of additional organizations to this workgroup. This provides the ability for administrative workgroups from other organizations to view this workgroup. You are limited to the organizations that have been added to your account."></a></header>
-
+        
+            <div class="section-text">
+	           <p>All required fields are in <strong>bold</strong> and have a red <span class="required">*</span> next to the field label.</p>        
+            </div>
         <div class="section-contents">
 @*        <div class="wizard-instructions" id="wizard-instructions-form">
             <p>You can add any number of additional organizations to this workgroup. This provides the ability for administrative workgroups from other organizations to view this workgroup. You are limited to the organizations that have been added to your account.</p>
             <p>To add a sub-organizations, begin typing the organization's name into the box labeled "Search Organizations". Once the desired organization is found, click on its name. Organizations can be removed by clicking the "x" to the right of its name.</p>
         </div> *@ 
-            <div class="section-text">
-	           <p>All required fields are in <strong>bold</strong> and have a red <span class="required">*</span> next to the field label.</p>        
-            </div>
 
 	        <ul>
                 <li>
