Moved order Index and AdminOrders to History Controller.

--- a/Purchasing.Web/Views/History/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/History/AdminOrders.cshtml
@@ -1,37 +1,19 @@
 ﻿@model FilteredOrderListModelDto
            
 @{
-    var extra = "";
-    if(!string.IsNullOrWhiteSpace(Model.ShowLast))
-    {
-        extra = " completed this month";
-    }
-    ViewBag.Title = "Orders" + extra;
+    ViewBag.Title = "Admin Orders";
     ViewBag.DataTablesPageSize = 50;
     ViewBag.SingleColumn = false;
-    ViewBag.GetMethod = "Index";
-    ViewBag.LoadTableTools = true;
-    
-    Bundles.Reference("scripts/public/single/TableTools.js");
-    Bundles.Reference("scripts/public/single/ZeroClipboard.js");
-    Bundles.Reference("scripts/public/single/RearrangeDataTable.js");
-   
+    ViewBag.GetMethod = "AdminOrders";
 }
 
 @section SubNav
 {
 	<ul class='navigation'>
-        @*<li>@Html.ActionLink("Create New", "Create")</li>*@
-        @if(string.IsNullOrWhiteSpace(Model.ShowLast))
-        {
-            <li>@*@Html.ActionLink("Filters", "filters", "", new { @class = "button" })*@
-                <a href="#" id="filterToggle" class="button selected">Filters</a>
-            </li>
-        }
+        <li><a href="#" id="filterToggle" class="button selected">Filters</a>
         <li>@Html.ActionLink("Update Column Preferences", "ColumnPreferences", "User", new { id = User.Identity.Name, fromList = true }, new { @class = "button" })</li>
 	</ul>
 }
-
 
 @section AdditionalScripts
 {
@@ -58,7 +40,7 @@
                     }
                 }
             });
-            
+
             $(".showTip").qtip({
                 overwrite: false,
                 show: {
@@ -74,14 +56,14 @@
                 }
             });
         });
-        
+
         $(function () {
             $(".workgroupDetails").click(function () {
                 var temp = $(this);
                 var orderId = temp.data("id");
                 var role = temp.data("role");
                 //alert(orderId + role);
-                var url = '@Url.Action("GetPeeps")';
+                var url = '@Url.Action("GetPeeps", "Order")';
                 var dialogList = $("#peepsUl");
                 dialogList.empty();
                 $("#peepsDialog").dialog("open");
@@ -103,11 +85,9 @@
     </script>
 }
 
-@if (string.IsNullOrWhiteSpace(Model.ShowLast))
- {
-    @Html.Partial("_OrderFilter", Model)
- }
-    
+@Html.Partial("_OrderFilter", Model)
+
 @Html.Partial("_OrdersTable", Model)
 
 @Html.Partial("_PeepsDialog")
+
