--- a/Purchasing.Web/Views/History/_OrderFilter.cshtml
+++ b/Purchasing.Web/Views/History/_OrderFilter.cshtml
@@ -10,7 +10,7 @@
     <!--<header class="ui-widget-header ui-corner-top"></header>-->
     <div class="section-contents">
 
-    @using (Html.BeginForm((string)ViewBag.GetMethod, "Order", FormMethod.Get))
+    @using (Html.BeginForm((string)ViewBag.GetMethod, "History", FormMethod.Get))
     {
         <ul>
             <li>
