--- a/Purchasing.Web/Views/Search/Results.cshtml
+++ b/Purchasing.Web/Views/Search/Results.cshtml
@@ -99,7 +99,7 @@
                     <p>
                         @lineResult.Quantity [@lineResult.Unit] of <em>@lineResult.Description</em> with Catalog# @(string.IsNullOrWhiteSpace(lineResult.CatalogNumber) ? "N/A" : lineResult.CatalogNumber)
                         <span>
-                            Additional info: @lineResult.CommodityId, @lineResult.Url, @lineResult.Notes
+                            Additional info: @lineResult.CommodityId, @lineResult.Url, @lineResult.Notes, @lineResult.ReceivedNotes
                         </span>
                     </p>
                 </li>
