--- a/Purchasing.Web/Views/Home/Landing.cshtml
+++ b/Purchasing.Web/Views/Home/Landing.cshtml
@@ -69,7 +69,7 @@
             <tfoot>
                 <tr>
                     <td colspan="4">&nbsp;</td>
-                    <td><a href="@Url.Action("Index", "History", new { })" id="orders-view-history">View orders like this &gt;</a></td>
+                    <td><a href="@Url.Action("Index", "History", new { ShowPending = true })" id="orders-view-history">View orders like this &gt;</a></td>
                 </tr>
             </tfoot>
         </table>
