Removed Duplicate columnPrefs field

--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -215,7 +215,7 @@
         }
     }
 
-    if (Model.ColumnPreferences.ShowAccountNumber || Model.ColumnPreferences.ShowAccountAndSubAccount)
+    if (Model.ColumnPreferences.ShowAccountNumber)
     {
         if(tableHeader)
         {
