--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -81,6 +81,18 @@
         }
     }
 
+    if (Model.ColumnPreferences.ShowLineItems)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Line Item Summary</th>");
+        }
+                else
+        {
+            result.Append("<td>" + @Html.Encode(item.LineItems) + "</td>");
+        }
+    }
+
     if(Model.ColumnPreferences.ShowShipTo)
     {
         if(tableHeader)
