--- a/Purchasing.Web/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderDetails.cshtml
@@ -43,7 +43,10 @@
                         </select>
                         <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0 0.1em 0; padding-top: .4em; vertical-align: sub; float: none; width: auto; display: inline;">
                         <a href="#" title="Search Accounts" class="search-account ui-icon ui-icon-search"></a></span>
-                        <select data-bind="enable: $root.shouldEnableSubAccounts(subAccounts), value: subAccount, options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
+                        <select data-bind="enable: $root.shouldEnableSubAccounts($root.subAccounts), value: subAccount, foreach: $root.subAccounts" name="SubAccount" class="account-subaccount">
+                            <option data-bind="value: id, text: text, attr: { title: title }"></option>
+                        </select>
+                        @*<select data-bind=", value: subAccount, options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>*@
                         <input data-bind="value: project" name="Project" type="text" placeholder="Proj" class="account-projectcode" maxlength="10"/>
                     </div>
 				</div>
