added fixed column headers for long tables.  So when a person scrolls past the headers, a fixed header will appear at the top of the page.

--- a/Purchasing.Web/Views/History/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/History/AdminOrders.cshtml
@@ -5,6 +5,9 @@
     ViewBag.DataTablesPageSize = 50;
     ViewBag.SingleColumn = false;
     ViewBag.GetMethod = "AdminOrders";
+    ViewBag.LoadFixedHeaders = true;
+
+    Bundles.Reference("scripts/public/single/FixedHeader.min.js");
 }
 
 @section SubNav
