--- a/Purchasing.Web/Views/History/Index.cshtml
+++ b/Purchasing.Web/Views/History/Index.cshtml
@@ -11,10 +11,12 @@
     ViewBag.SingleColumn = false;
     ViewBag.GetMethod = "Index";
     ViewBag.LoadTableTools = true;
+    ViewBag.LoadFixedHeaders = true;
     
     Bundles.Reference("scripts/public/single/TableTools.js");
     Bundles.Reference("scripts/public/single/ZeroClipboard.js");
     Bundles.Reference("scripts/public/single/RearrangeDataTable.js");
+    Bundles.Reference("scripts/public/single/FixedHeader.min.js");
    
 }
 
