--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -45,7 +45,8 @@
                     ActiveIssuesCountUrl = Url.Action("GetActiveIssuesCount", "Help"),
                     DataTablesPageSize = ViewBag.DataTablesPageSize ?? 10, 
                     LoadTableTools = ViewBag.LoadTableTools ?? false,
-                    TableToolsSwf = Url.Content("~/Content/DataTables-1.9.0/extras/TableTools/media/swf/copy_cvs_xls.swf")
+                    TableToolsSwf = Url.Content("~/Content/DataTables-1.9.0/extras/TableTools/media/swf/copy_cvs_xls.swf"),
+                    LoadFixedHeaders = ViewBag.LoadFixedHeaders ?? false
                 }, "common");
         Bundles.Reference("scripts/public/common", pageLocation: "common");
     }
